# mcp-audit

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  action.yml  clippy.toml  rustfmt.toml
.github/workflows/: ci.yml  docker-publish.yml  mcp-scan.yml  pages.yml  release.yml
design/: brand-guidelines.md
docs/: rules-reference.md
docs/rules/: MCP-01-tool-poisoning.md  MCP-02-excessive-permissions.md  MCP-03-prompt-injection.md  MCP-04-insecure-credentials.md  MCP-05-server-spoofing.md  MCP-06-insecure-dependencies.md  MCP-07-command-injection.md  MCP-08-data-exfiltration.md  MCP-09-insufficient-logging.md  MCP-10-unauthorized-access.md  MCP-11-denial-of-service.md  MCP-12-tool-shadowing.md  MCP-13-resource-exposure.md  MCP-14-insecure-transport.md  MCP-15-tool-injection.md  MCP-16-missing-input-validation.md  MCP-17-data-leakage.md  MCP-18-prompt-injection-vectors.md  MCP-19-excessive-tool-permissions.md  index.md
examples/: README.md  claude-desktop-example.json  safe-config.json  vulnerable-config.json
scripts/: run_weekly_digest.sh
scripts/ci/: entrypoint.sh
site/: CNAME  index.html  robots.txt  sitemap.xml
src/: cli.rs  config.rs  error.rs  init.rs  lib.rs  main.rs
src/connection/: mod.rs  protocol.rs  transport.rs
src/digest/: mod.rs
src/http/: client.rs  mod.rs
src/monitors/: adoption.rs  cve.rs  github.rs  mod.rs  owasp.rs
src/output/: json.rs  markdown.rs  mod.rs  sarif.rs  table.rs
src/parser/: mod.rs
src/rules/: mcp01_tool_poisoning.rs  mcp02_excessive_permissions.rs  mcp03_prompt_injection.rs  mcp04_insecure_credentials.rs  mcp05_server_spoofing.rs  mcp06_insecure_dependencies.rs  mcp12_tool_shadowing.rs  (+13 more)
tests/: connection_integration.rs  monitor_integration.rs  scan_integration.rs
(+3 files in other folders)
